--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<title>Git Intro</title>
+	<link rel="stylesheet" type="text/css" href="test.css"/>
 </head>
 <body>
 	<h1>Welcome to Git!</h1>
